# GlobalTalk

./: .gitignore  .gitmodules  .project.gf  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  defer.cpp  imgui.ini  linux-talk.cpp  old-code.cpp  query_state.c  query_state.h  windows-talk.cpp
res/: example.cfg  mute.h  pulse.txt  unmute-original.raw  unmute.cd  unmute.h  unmute.raw
src/: config.cpp  config.h  main.cpp  utils.h
src/core/: audio.h  bind.h  input.cpp  input.h
src/core/linux/: audio.cpp  input.cpp
src/core/linux/audio/: alsa.cpp  alsa.h  pipewire.cpp  pulseaudio.cpp  pulseaudio.h
src/core/linux/input/: wayland.cpp  wayland.h  xorg.cpp  xorg.h
src/core/windows/: input.cpp
src/gui/: config_menu.cpp  config_menu.h  runtime_menu.cpp
src/os/: audio.h  audio_linux.cpp  audio_windows.cpp  input.h  input_linux.cpp  input_linux_internal.h  input_linux_wayland.cpp  input_windows.cpp
src/os/linux/: audio.cpp  audio_alsa.cpp  audio_pipewire.cpp  audio_pulseaudio.cpp  input.cpp  input_wayland.cpp  input_xorg.cpp  internal.h
src/os/linux/core/: audio.cpp  input.cpp
src/os/linux/gui/: audio_panel.cpp
src/os/linux/internal/audio/: alsa.h  pipewire.cpp  pulseaudio.cpp  pulseaudio.h
src/os/linux/internal/input/: evdev.cpp  wayland.cpp  wayland.h  xorg.cpp
src/os/template/core/: audio.cpp  input.cpp
src/os/template/gui/: audio_panel.cpp
src/os/windows/: audio.cpp  input.cpp
src/os/windows/core/: audio.cpp  input.cpp
src/os/windows/gui/: audio_panel.cpp
test/: pulse_testing.cpp
